Did some initial visuall design

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,46 @@
 @import './base.css';
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+body {
+  width: 100%;
+  display: grid;
+  justify-content: stretch;
 }
 
-a,
-.green {
+main {
+  padding: 1rem;
+  max-width: 400px;
+  width: 98%;
+  border-radius: .2rem;
+}
+
+nav {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: stretch;
+  margin-bottom: 1rem;
+  justify-items: stretch;
+}
+nav a {
+  display: block;
+  padding: 0.5rem;
+  background: var(--background-4);
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+  color: var(--background-1);
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 0.8rem;
+}
+nav a.router-link-active {
+  background: var(--accent-4);
+  color: var(--accent-1)
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  padding: 0.5rem;
 }
