--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+
+/*
 *,
 *::before,
 *::after {
@@ -42,3 +45,5 @@ button {
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
+
+*/
