--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,12 +8,9 @@
   margin: 0;
   font-weight: normal;
 }
+*/
 
 :root {
-  font-size: 16px;
-  font-family: sans-serif;
-  line-height: 1.5em;
-
   --background-5: #e0f7f9;
   --background-4: #b2e3e7;
   --background-3: #99e1e5;
@@ -34,7 +31,7 @@ html {
 }
 
 button {
-  background: var(--background-2);
+  /* background: var(--background-2);
   color: white;
   border: none;
   border-radius: 0.2rem;
@@ -43,7 +40,7 @@ button {
   font-size: 0.8rem;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.03em; */
 }
 
 */
