--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,14 +6,11 @@ html {
 }
 
 button {
-  /* background: var(--background-2);
-  color: white;
-  border: none;
-  border-radius: 0.2rem;
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  font-size: 0.8rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.03em; */
+  @apply py-1 px-3
+  text-teal-600
+  text-xs/5 font-semibold font-stretch-ultra-expanded tracking-widest uppercase
+  text-center
+  border-1 border-teal-200 rounded-lg
+  hover:bg-teal-300
+  min-w-10;
 }
