--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -10,7 +10,7 @@ button {
   text-teal-600
   text-xs/5 font-semibold font-stretch-ultra-expanded tracking-widest uppercase
   text-center
-  border-1 border-teal-200 rounded-lg
+  border-1 border-pink-300 rounded-lg
   hover:bg-teal-300
   min-w-10;
 }
