--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,11 +6,11 @@ html {
 }
 
 button {
-  @apply py-1 px-3
+  @apply p-2
   text-teal-600
   text-xs/5 font-semibold font-stretch-ultra-expanded tracking-widest uppercase
   text-center
   border-1 border-pink-300 rounded-lg
   hover:bg-teal-300
-  min-w-10;
+  
 }
